# isomorphic

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: demo_app.py
fastapi_isomorphic/: __init__.py  __main__.py  cli.py  core.py  invoker.py  models.py  resolver.py  utils.py
tests/: test_cli.py
